Uniform locale headers

--- a/lib/messagebundles/MessagesBundle_ca.properties
+++ b/lib/messagebundles/MessagesBundle_ca.properties
@@ -26,7 +26,13 @@ DISABLE_BOLD_CHARACTERS=false
 LAYOUT_RIGHT_TO_LEFT=false
 
 ################################################################################
-# Keys/value pairs for general strings that can be used in any components
+# Key/value pair for whether or not the tips of the day should be displayed.
+# The default is false (set to true in english resource).
+################################################################################
+HAS_TIPS_OF_THE_DAY=false
+
+################################################################################
+# All other translated resources are missing. Look at the default English file.
 ################################################################################
 GENERAL_OK_BUTTON_LABEL=D'acord
 GENERAL_OK_BUTTON_TIP=Aplica acció
