--- a/lib/messagebundles/MessagesBundle_en__RTL.properties
+++ b/lib/messagebundles/MessagesBundle_en__RTL.properties
@@ -8,7 +8,7 @@ LOCALE_LANGUAGE_NAME=English
 LOCALE_COUNTRY_CODE=
 LOCALE_COUNTRY_NAME=United States
 LOCALE_VARIANT_CODE=RTL
-LOCALE_VARIANT_NAME=Left-To-Right Layout
+LOCALE_VARIANT_NAME=Right-To-Left Layout
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
 LOCALE_ENGLISH_LANGUAGE_NAME=English
@@ -35,4 +35,4 @@ HAS_TIPS_OF_THE_DAY=true
 # All other translated resources are missing. Look at the default English file.
 ################################################################################
 # This file is normally empty (takes its defaults from the base properties).
-# Needed to allow selecting English on a non-English system.
+# Needed only to test the layout of RTL scripts in English.
