--- a/lib/messagebundles/MessagesBundle_hi.properties
+++ b/lib/messagebundles/MessagesBundle_hi.properties
@@ -67,4 +67,6 @@ OPTIONS_RESTART_REQUIRED=\u090f\u0915 \u092f\u093e \u0905\u0928\u0947\u0915 \u09
 YES=\u0939\u093e\u0901
 NO=\u0928\u0939\u0940\u0902
 
-#  Incomplete translation. Missing messages will be found in the default English resources.
+################################################################################
+# All other translated resources are missing. Look at the default English file.
+################################################################################
