--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -12,7 +12,6 @@ LOCALE_VARIANT_NAME=\u05d1\u05d9\u05e0\u05dc\u05d0\u05d5\u05de\u05d9
 LOCALE_SCRIPT_CODE=Hebr
 LOCALE_SCRIPT_NAME=Hebrew
 LOCALE_ENGLISH_LANGUAGE_NAME=Hebrew
-
 # UTF-8 file edited with Notepad on Windows NT/2000/XP with the "Courier New" font
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
@@ -24,7 +23,13 @@ DISABLE_BOLD_CHARACTERS=false
 # Key/value pair for whether or not the layout should be adapted for right-to-
 # left scripts. Must be "true" or "false" (true only for semitic scripts).
 ################################################################################
-LAYOUT_RIGHT_TO_LEFT=true
+LAYOUT_RIGHT_TO_LEFT=false
+
+################################################################################
+# Key/value pair for whether or not the tips of the day should be displayed.
+# The default is false (set to true in english resource).
+################################################################################
+HAS_TIPS_OF_THE_DAY=false
 
 ################################################################################
 # Keys/value pairs for general strings that can be used in any components
