--- a/lib/messagebundles/MessagesBundle_pt_BR.properties
+++ b/lib/messagebundles/MessagesBundle_pt_BR.properties
@@ -13,6 +13,25 @@ LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
 LOCALE_ENGLISH_LANGUAGE_NAME=Portuguese (Brasilian)
 
+################################################################################
+# Key/value pair for whether or not bold characters should be used for this
+# locale. Must be "true" or "false" (true only for complex scripts).
+################################################################################
+DISABLE_BOLD_CHARACTERS=false
+
+################################################################################
+# Key/value pair for whether or not the layout should be adapted for right-to-
+# left scripts. Must be "true" or "false" (true only for semitic scripts).
+################################################################################
+LAYOUT_RIGHT_TO_LEFT=false
+
+################################################################################
+# Key/value pair for whether or not the tips of the day should be displayed.
+# The default is false (set to true in english resource).
+################################################################################
+HAS_TIPS_OF_THE_DAY=false
+
+################################################################################
 # To simplify management of these resources, all other localized definitions
 # are now found in the Standard Portuguese file "MessagesBundle_pt.properties",
 # as most of them were simply identical.
@@ -20,3 +39,4 @@ LOCALE_ENGLISH_LANGUAGE_NAME=Portuguese (Brasilian)
 # European Pourtuguese localized file, you may just need to define the
 # Brazilian variants here, and keep the European variants in the standard
 # resource bundle.
+################################################################################
