--- a/lib/messagebundles/MessagesBundle_bu.properties
+++ b/lib/messagebundles/MessagesBundle_bu.properties
@@ -17,7 +17,19 @@ LOCALE_ENGLISH_LANGUAGE_NAME=Myanmarese
 # Key/value pair for whether or not bold characters should be used for this
 # locale. Must be "true" or "false" (true only for complex scripts).
 ################################################################################
-DISABLE_BOLD_CHARACTERS=false
+DISABLE_BOLD_CHARACTERS=true
+
+################################################################################
+# Key/value pair for whether or not the layout should be adapted for right-to-
+# left scripts. Must be "true" or "false" (true only for semitic scripts).
+################################################################################
+LAYOUT_RIGHT_TO_LEFT=false
+
+################################################################################
+# Key/value pair for whether or not the tips of the day should be displayed.
+# The default is false (set to true in english resource).
+################################################################################
+HAS_TIPS_OF_THE_DAY=false
 
 ################################################################################
 # All other translated resources are missing. Look at the default English file.
