--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -32,7 +32,7 @@ LAYOUT_RIGHT_TO_LEFT=false
 HAS_TIPS_OF_THE_DAY=false
 
 ################################################################################
-# Keys/value pairs for general strings that can be used in any components
+# All other translated resources are missing. Look at the default English file.
 ################################################################################
 GENERAL_OK_BUTTON_LABEL=OK
 GENERAL_OK_BUTTON_TIP=Führt den Vorgang aus und schließt dieses Fenster.
