--- a/lib/messagebundles/MessagesBundle_hr.properties
+++ b/lib/messagebundles/MessagesBundle_hr.properties
@@ -12,7 +12,7 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Central European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Croatian
-
+# UTF-8 encoded file (uses some Central European characters from ISO-8859-2)
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
 # locale. Must be "true" or "false" (true only for complex scripts).
@@ -20,5 +20,17 @@ LOCALE_ENGLISH_LANGUAGE_NAME=Croatian
 DISABLE_BOLD_CHARACTERS=false
 
 ################################################################################
-# All other translated resources are missing. Look at the default English file.
+# Key/value pair for whether or not the layout should be adapted for right-to-
+# left scripts. Must be "true" or "false" (true only for semitic scripts).
+################################################################################
+LAYOUT_RIGHT_TO_LEFT=false
+
+################################################################################
+# Key/value pair for whether or not the tips of the day should be displayed.
+# The default is false (set to true in english resource).
+################################################################################
+HAS_TIPS_OF_THE_DAY=false
+
+################################################################################
+# Keys/value pairs for general strings that can be used in any components
 ################################################################################
