--- a/lib/messagebundles/MessagesBundle_ko.properties
+++ b/lib/messagebundles/MessagesBundle_ko.properties
@@ -12,14 +12,28 @@ LOCALE_VARIANT_NAME=\uad6d\uc81c
 LOCALE_SCRIPT_CODE=Hang
 LOCALE_SCRIPT_NAME=Hangul
 LOCALE_ENGLISH_LANGUAGE_NAME=Korean
-
 #UTF-8 file edited with Notepad/Windows 2000, and a "Gulim" or "GulimChe" font.
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
 # locale. Must be "true" or "false" (true only for complex scripts).
 ################################################################################
-DISABLE_BOLD_CHARACTERS=false
+DISABLE_BOLD_CHARACTERS=true
 
+################################################################################
+# Key/value pair for whether or not the layout should be adapted for right-to-
+# left scripts. Must be "true" or "false" (true only for semitic scripts).
+################################################################################
+LAYOUT_RIGHT_TO_LEFT=false
+
+################################################################################
+# Key/value pair for whether or not the tips of the day should be displayed.
+# The default is false (set to true in english resource).
+################################################################################
+HAS_TIPS_OF_THE_DAY=false
+
+################################################################################
+# Keys/value pairs for general strings that can be used in any components
+################################################################################
 ################################################################################
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
