--- a/lib/messagebundles/MessagesBundle_nn.properties
+++ b/lib/messagebundles/MessagesBundle_nn.properties
@@ -1,6 +1,6 @@
 ################################################################################
 # Messages Bundle for LimeWire 2.9.10
-# Specialization for: Norwegian Nynorsk - Norway
+# Specialization for: Norwegian New - Norway
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=nn
@@ -24,6 +24,12 @@ DISABLE_BOLD_CHARACTERS=false
 # left scripts. Must be "true" or "false" (true only for semitic scripts).
 ################################################################################
 LAYOUT_RIGHT_TO_LEFT=false
+
+################################################################################
+# Key/value pair for whether or not the tips of the day should be displayed.
+# The default is false (set to true in english resource).
+################################################################################
+HAS_TIPS_OF_THE_DAY=false
 
 ################################################################################
 # All other translated resources are missing. Look at the default Norwegian file.
