--- a/lib/messagebundles/MessagesBundle_ro.properties
+++ b/lib/messagebundles/MessagesBundle_ro.properties
@@ -20,6 +20,18 @@ LOCALE_ENGLISH_LANGUAGE_NAME=Romanian
 DISABLE_BOLD_CHARACTERS=false
 
 ################################################################################
+# Key/value pair for whether or not the layout should be adapted for right-to-
+# left scripts. Must be "true" or "false" (true only for semitic scripts).
+################################################################################
+LAYOUT_RIGHT_TO_LEFT=false
+
+################################################################################
+# Key/value pair for whether or not the tips of the day should be displayed.
+# The default is false (set to true in english resource).
+################################################################################
+HAS_TIPS_OF_THE_DAY=false
+
+################################################################################
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
 GENERAL_OK_BUTTON_LABEL=OK
