--- a/lib/messagebundles/MessagesBundle_ta.properties
+++ b/lib/messagebundles/MessagesBundle_ta.properties
@@ -12,7 +12,7 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Taml
 LOCALE_SCRIPT_NAME=Tamil
 LOCALE_ENGLISH_LANGUAGE_NAME=Tamil
-
+# Edited with an UTF-8 compatible editor with Tamil font
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
 # locale. Must be "true" or "false" (true only for complex scripts).
@@ -24,6 +24,12 @@ DISABLE_BOLD_CHARACTERS=false
 # left scripts. Must be "true" or "false" (true only for semitic scripts).
 ################################################################################
 LAYOUT_RIGHT_TO_LEFT=false
+
+################################################################################
+# Key/value pair for whether or not the tips of the day should be displayed.
+# The default is false (set to true in english resource).
+################################################################################
+HAS_TIPS_OF_THE_DAY=false
 
 ################################################################################
 # All other translated resources are missing. Look at the default English file.
