--- a/lib/messagebundles/MessagesBundle_nn.properties
+++ b/lib/messagebundles/MessagesBundle_nn.properties
@@ -32,5 +32,5 @@ LAYOUT_RIGHT_TO_LEFT=false
 HAS_TIPS_OF_THE_DAY=false
 
 ################################################################################
-# All other translated resources are missing. Look at the default Norwegian file.
+# All other translated resources are missing. Look at the default English file.
 ################################################################################
