--- a/lib/messagebundles/MessagesBundle_pt_BR.properties
+++ b/lib/messagebundles/MessagesBundle_pt_BR.properties
@@ -32,6 +32,9 @@ LAYOUT_RIGHT_TO_LEFT=false
 HAS_TIPS_OF_THE_DAY=false
 
 ################################################################################
+# All other translated resources are missing. Look at the default English file.
+################################################################################
+################################################################################
 # To simplify management of these resources, all other localized definitions
 # are now found in the Standard Portuguese file "MessagesBundle_pt.properties",
 # as most of them were simply identical.
