Set copyright year to 2004! Small fixes for coherence

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -97,7 +97,7 @@ APP_TITLE=LimeWire: Enabling Open Information Sharing
 ABOUT_TITLE=About LimeWire
 ABOUT_LABEL_START=LimeWire Client
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=Copyright (c)2000-2003 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=About LimeWire
 ABOUT_CREDITS_LABEL=Credits
 ABOUT_CREDITS_TIP=Display credits information about LimeWire.
@@ -108,7 +108,7 @@ ABOUT_LICENSE_TIP=Display the license agreement about this software.
 ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 ABOUT_BUTTON_LABEL=OK
 ABOUT_BUTTON_TIP=Close the About Window
-#Do not uncomment the following lines without providing a translated HTML file!
+#Do not uncomment the following line without providing a translated HTML file!
 ABOUT_FILE_NAME=about.html
 
 ###################################################################
@@ -2121,7 +2121,7 @@ HOPS8=Hops 8
 HOPS9=Hops 9
 
 # Special Query labels
-WHAT_IS_NEW_QUERIES=What Is New?
+WHAT_IS_NEW_QUERIES=What's New?
 
 # TTL labels
 TTL0=TTL 0
