--- a/lib/messagebundles/MessagesBundle_hu.properties
+++ b/lib/messagebundles/MessagesBundle_hu.properties
@@ -114,7 +114,6 @@ SEARCH_TITLE=Keres
 MONITOR_TITLE=Monitor
 CONNECTIONS_TITLE=Kapcsol\u00f3d\u00e1s
 LIBRARY_TITLE=K\u00f6nyvt\u00e1r
-SHOPPING_TITLE=LimeBolt
 OPTIONS_TITLE=V\u00e1laszt\u00e1s
 STATS_TITLE=Statisztika
 DOWNLOAD_TITLE=Let\u00f6lt\u00e9s
@@ -127,7 +126,6 @@ SEARCH_TIP=File keres\u00e9s let\u00f6lt\u00e9s
 MONITOR_TIP=Keres\u00e9s \u00e9s felt\u00f6lt\u00e9s megtekint\u00e9s
 CONNECTIONS_TIP=Kapcsol\u00f3d\u00e1s m\u00e1sik taghoz
 LIBRARY_TIP=Mentett fileok megtekint\u00e9se
-SHOPPING_TIP=V\u00e1s\u00e1rl\u00e1s a LimeWire piacon
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -181,9 +179,6 @@ MENU_NAV_CONN_ACCESSIBLE=Kapcsolatk\u00e9perny\u0151 megjelen\u00edt\u00e9se
 MENU_NAV_LIB=K\u00f6nyvt\u00e1r
 MENU_NAV_LIB_MNEMONIC=N
 MENU_NAV_LIB_ACCESSIBLE=K\u00f6nyvt\u00e1rk\u00e9perny\u0151 megjelen\u00edt\u00e9se
-MENU_NAV_SHOPPING=LimeShop
-MENU_NAV_SHOPPING_MNEMONIC=L
-MENU_NAV_SHOPPING_ACCESSIBLE=LimeShop honlap megjelen\u00edt\u00e9se
 
 MENU_VIEW_TITLE=N\u00e9zet
 MENU_VIEW_TITLE_MNEMONIC=N
@@ -196,18 +191,12 @@ MENU_VIEW_CONNECTIONS_ACCESSIBLE=Kapcsolat ablak megjelen\u00edt\u00e9s
 MENU_VIEW_LIBRARY=K\u00f6nyvt\u00e1r
 MENU_VIEW_LIBRARY_MNEMONIC=N
 MENU_VIEW_LIBRARY_ACCESSIBLE=K\u00f6nyvt\u00e1r ablak megjelen\u00edt\u00e9s
-MENU_VIEW_SHOPPING=LimeShop
-MENU_VIEW_SHOPPING_MNEMONIC=L
-MENU_VIEW_SHOPPING_ACCESSIBLE=Bev\u00e1s\u00e1rl\u00f3 ablak megjelen\u00edt\u00e9s
 
 MENU_RESOURCES_TITLE=Er\u0151forr\u00e1sok
 MENU_RESOURCES_TITLE_MNEMONIC=R
 MENU_RESOURCES_PRO=LimeWire PRO
 MENU_RESOURCES_PRO_MNEMONIC=P
 MENU_RESOURCES_PRO_ACCESSIBLE=LimeWire PRO honlap megjelen\u00edt\u00e9se
-MENU_RESOURCES_LIMESHOP=LimeShop
-MENU_RESOURCES_LIMESHOP_MNEMONIC=L
-MENU_RESOURCES_LIMESHOP_ACCESSIBLE=LimeShop honlap megjelen\u00edt\u00e9se
 
 MENU_TOOLS_TITLE=Eszk\u00f6z\u00f6k
 MENU_TOOLS_TITLE_MNEMONIC=E
@@ -1076,7 +1065,7 @@ STATS_BANDWIDTH_PANE_TITLE=S\u00e1vsz\u00e9less\u00e9g
 #??? STATS_BANDWIDTH_PANE_LABEL=Bandwidth statistics include complete information on all bandwidth sent upstream and downstream. Click on one of the categories to see the desired statistics.
 
 STATS_NET_PANE_TITLE=H\u00e1l\u00f3zat
-#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite inaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
+#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite innaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
 
 STATS_ADVANCED_PANE_TITLE=Tov\u00e1bbi
 #??? STATS_ADVANCED_PANE_LABEL=Advanced statistics include detailed information for Gnutella messages and HTTP traffic. This information can be useful for advanced users as well as for researchers working on the Gnutella network. For example, researchers can choose to write any statistic to a file. This file will be named automatically and will be saved in the working directory. Data will be reported in comma-delimited format, easily viewable in any spreadsheet program. Advanced statistics are not displayed by default and are not recommended for most users.
