--- a/lib/messagebundles/MessagesBundle_is.properties
+++ b/lib/messagebundles/MessagesBundle_is.properties
@@ -103,7 +103,7 @@ ABOUT_SCROLL_CHECK_BOX_LABEL=Skruna sjálfkrafa
 ###################################################################
 # Key/value pairs for the Windows system tray -- Coming soon...
 ###################################################################
-TRAY_TOOLTIP=LimeWire: Drifkraftur Gnutella netsins
+TRAY_TOOLTIP=LimeWire: drifkraftur Gnutella netsins
 TRAY_RESTORE_LABEL=Endursetja
 TRAY_ABOUT_LABEL=Um LimeWire...
 TRAY_EXIT_LATER_LABEL=Loka eftir allar færslur
@@ -116,7 +116,6 @@ SEARCH_TITLE=Leita
 MONITOR_TITLE=Eftirlit
 CONNECTIONS_TITLE=Tengingar
 LIBRARY_TITLE=Skráarsafnið
-SHOPPING_TITLE=LimeShop
 OPTIONS_TITLE=Valmöguleikar
 STATS_TITLE=Tölulegar upplýsingar
 DOWNLOAD_TITLE=Niðurhal
@@ -129,7 +128,6 @@ SEARCH_TIP=Leita og sækja skrár
 MONITOR_TIP=Skoða leitir og upphöl
 CONNECTIONS_TIP=Tengjast öðrum notendum
 LIBRARY_TIP=Skoða lista yfir vistaðar skrár
-SHOPPING_TIP=Versla með LimeWire
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -186,9 +184,6 @@ MENU_NAV_CONN_ACCESSIBLE=Sýna tengingaglugga
 MENU_NAV_LIB=Skráarsafn
 MENU_NAV_LIB_MNEMONIC=S
 MENU_NAV_LIB_ACCESSIBLE=Sýna skráarsafnsglugga
-MENU_NAV_SHOPPING=LimeShop
-MENU_NAV_SHOPPING_MNEMONIC=P
-MENU_NAV_SHOPPING_ACCESSIBLE=Opna LimeShop vefsíðuna
 
 MENU_VIEW_TITLE=Sjá
 MENU_VIEW_TITLE_MNEMONIC=J
@@ -201,18 +196,12 @@ MENU_VIEW_CONNECTIONS_ACCESSIBLE=Sýna tengingaglugga
 MENU_VIEW_LIBRARY=Skráarsafn
 MENU_VIEW_LIBRARY_MNEMONIC=S
 MENU_VIEW_LIBRARY_ACCESSIBLE=Sýna skráarsafnsglugga
-MENU_VIEW_SHOPPING=LimeShop
-MENU_VIEW_SHOPPING_MNEMONIC=L
-MENU_VIEW_SHOPPING_ACCESSIBLE=Sýna LimeShop vefsíðuna
 
 MENU_RESOURCES_TITLE=Efni
 MENU_RESOURCES_TITLE_MNEMONIC=E
 MENU_RESOURCES_PRO=LimeWire PRO
 MENU_RESOURCES_PRO_MNEMONIC=P
 MENU_RESOURCES_PRO_ACCESSIBLE=Sýna vefsíðu LimeWire PRO
-MENU_RESOURCES_LIMESHOP=LimeShop
-MENU_RESOURCES_LIMESHOP_MNEMONIC=L
-MENU_RESOURCES_LIMESHOP_ACCESSIBLE=Sýna vefsíðu LimeShop
 
 MENU_TOOLS_TITLE=Tæki og tól
 MENU_TOOLS_TITLE_MNEMONIC=T
