--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=\u05d9\u05e9\u05e8\u05d0\u05dc
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=\u05d1\u05d9\u05e0\u05dc\u05d0\u05d5\u05de\u05d9
 LOCALE_SCRIPT_CODE=Hebr
-LOCALE_SCRIPT_NAME=Hebrew
+LOCALE_SCRIPT_NAME=\u05e2\u05d1\u05e8\u05d9\u05ea
 LOCALE_ENGLISH_LANGUAGE_NAME=Hebrew
 # UTF-8 file edited with Notepad on Windows NT/2000/XP with the "Courier New" font
 ################################################################################
@@ -116,7 +116,6 @@ SEARCH_TITLE=\u05d7\u05b4\u05e4\u05bc\u05b5\u05e9\u05c2
 MONITOR_TITLE=\u05e1\u05b4\u05e4\u05b0\u05e8\u05b4\u05d9\u05bc\u05b8\u05d4
 CONNECTIONS_TITLE=\u05e7\u05b6\u05e9\u05c1\u05b6\u05e8
 LIBRARY_TITLE=\u05e1\u05b4\u05e4\u05b0\u05e8\u05b4\u05d9\u05bc\u05b8\u05d4
-SHOPPING_TITLE=Lime\u05d7\u05b2\u05e0\u05d5\u05bc\u05ea
 OPTIONS_TITLE=\u05d0\u05d5\u05b9\u05e4\u05bc\u05b0\u05e6\u05b0\u05d9\u05b8\u05d4
 STATS_TITLE=\u05e1\u05b0\u05d8\u05b8\u05d8\u05b4\u05d9\u05e1\u05b0\u05d8\u05b4\u05d9\u05e7\u05b8\u05d4
 DOWNLOAD_TITLE=\u05d4\u05d5\u05b9\u05e8\u05b4\u05d9\u05d3
@@ -129,7 +128,6 @@ UPLOAD_TITLE=\u05d4\u05b6\u05e2\u05b1\u05dc\u05b8\u05d4
 #??? MONITOR_TIP=View searches and uploads
 #??? CONNECTIONS_TIP=Connect to other clients
 #??? LIBRARY_TIP=View your repository of saved files
-#??? SHOPPING_TIP=Go shopping at the LimeWire marketplace
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -186,9 +184,6 @@ MENU_NAV_CONN_MNEMONIC=C
 MENU_NAV_LIB=(L)\u05e1\u05b4\u05e4\u05b0\u05e8\u05b4\u05d9\u05bc\u05b8\u05d4
 MENU_NAV_LIB_MNEMONIC=L
 #??? MENU_NAV_LIB_ACCESSIBLE=Display the library screen
-MENU_NAV_SHOPPING=Lime\u05d7\u05b2\u05e0\u05d5\u05bc\u05ea
-MENU_NAV_SHOPPING_MNEMONIC=E
-#??? MENU_NAV_SHOPPING_ACCESSIBLE=Display the LimeShop web site
 
 MENU_VIEW_TITLE=(V)\u05e8\u05b8\u05d0\u05b8\u05d4
 MENU_VIEW_TITLE_MNEMONIC=V
@@ -201,18 +196,12 @@ MENU_VIEW_CONNECTIONS_MNEMONIC=C
 MENU_VIEW_LIBRARY=(L)\u05e1\u05b4\u05e4\u05b0\u05e8\u05b4\u05d9\u05bc\u05b8\u05d4
 MENU_VIEW_LIBRARY_MNEMONIC=L
 #??? MENU_VIEW_LIBRARY_ACCESSIBLE=Show library window
-MENU_VIEW_SHOPPING=Lime\u05d7\u05b2\u05e0\u05d5\u05bc\u05ea
-MENU_VIEW_SHOPPING_MNEMONIC=E
-#??? MENU_VIEW_SHOPPING_ACCESSIBLE=Show shopping window
 
 MENU_RESOURCES_TITLE=(R)\u05de\u05b7\u05e9\u05c1\u05b0\u05d0\u05b8\u05d1
 MENU_RESOURCES_TITLE_MNEMONIC=R
 MENU_RESOURCES_PRO=LimeWire PRO
 MENU_RESOURCES_PRO_MNEMONIC=P
 #??? MENU_RESOURCES_PRO_ACCESSIBLE=Display the LimeWire PRO web site
-MENU_RESOURCES_LIMESHOP=Lime\u05d7\u05b2\u05e0\u05d5\u05bc\u05ea
-MENU_RESOURCES_LIMESHOP_MNEMONIC=E
-#??? MENU_RESOURCES_LIMESHOP_ACCESSIBLE=Display the LimeShop web site
 
 MENU_TOOLS_TITLE=(T)\u05db\u05bc\u05b0\u05dc\u05b4\u05d9
 MENU_TOOLS_TITLE_MNEMONIC=T
@@ -1126,7 +1115,7 @@ SKIN_EDITOR_PREVIEW_BUTTON=\u05ea\u05e6\u05d5\u05d2\u05d4 \u05de\u05e7\u05d3\u05
 #??? STATS_BANDWIDTH_PANE_LABEL=Bandwidth statistics include complete information on all bandwidth sent upstream and downstream. Click on one of the categories to see the desired statistics.
 
 #??? STATS_NET_PANE_TITLE=Network
-#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite inaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
+#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite innaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
 
 #??? STATS_ADVANCED_PANE_TITLE=Advanced
 #??? STATS_ADVANCED_PANE_LABEL=Advanced statistics include detailed information for Gnutella messages and HTTP traffic. This information can be useful for advanced users as well as for researchers working on the Gnutella network. For example, researchers can choose to write any statistic to a file. This file will be named automatically and will be saved in the working directory. Data will be reported in comma-delimited format, easily viewable in any spreadsheet program. Advanced statistics are not displayed by default and are not recommended for most users.
