--- a/lib/messagebundles/MessagesBundle_pl.properties
+++ b/lib/messagebundles/MessagesBundle_pl.properties
@@ -116,7 +116,6 @@ SEARCH_TITLE=Szukanie
 MONITOR_TITLE=Kontrola
 CONNECTIONS_TITLE=Po\u0142\u0105czenia
 LIBRARY_TITLE=Plikoteka
-SHOPPING_TITLE=Sklepik
 OPTIONS_TITLE=Opcje
 STATS_TITLE=Statystyki
 DOWNLOAD_TITLE=Pobieranie
@@ -129,7 +128,6 @@ SEARCH_TIP=Wyszukiwanie i pobieranie plik\u00f3w
 MONITOR_TIP=Kontrola transfer\u00f3w oraz przegl\u0105danie wynik\u00f3w wyszukiwania
 CONNECTIONS_TIP=\u0141\u0105czenie si\u0119 z innymi
 LIBRARY_TIP=Przegl\u0105danie pobranych plik\u00f3w
-SHOPPING_TIP=Zakupy w sklepiku LimeWire
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -186,9 +184,6 @@ MENU_NAV_CONN_ACCESSIBLE=Poka\u017c panel po\u0142\u0105cze\u0144.
 MENU_NAV_LIB=Plikoteka
 MENU_NAV_LIB_MNEMONIC=P
 MENU_NAV_LIB_ACCESSIBLE=Poka\u017c panel plikoteki.
-MENU_NAV_SHOPPING=Sklepik LimeWire
-MENU_NAV_SHOPPING_MNEMONIC=L
-MENU_NAV_SHOPPING_ACCESSIBLE=Poka\u017c panel sklepiku LimeWire.
 
 MENU_VIEW_TITLE=Widok
 MENU_VIEW_TITLE_MNEMONIC=W
@@ -204,9 +199,6 @@ MENU_VIEW_CONNECTIONS_ACCESSIBLE=Poka\u017c panel po\u0142\u0105cze\u0144.
 MENU_VIEW_LIBRARY=Plikoteka
 MENU_VIEW_LIBRARY_MNEMONIC=P
 MENU_VIEW_LIBRARY_ACCESSIBLE=Poka\u017c panel plikoteki.
-MENU_VIEW_SHOPPING=Sklepik LimeWire
-MENU_VIEW_SHOPPING_MNEMONIC=L
-MENU_VIEW_SHOPPING_ACCESSIBLE=Poka\u017c panel sklepiku LimeWire.
 #??? MENU_VIEW_THEMES_TITLE=Zastosuj themes
 #??? MENU_VIEW_THEMES_TITLE_MNEMONIC=T
 #??? MENU_VIEW_THEMES_GET_MORE=Get more themes
@@ -221,9 +213,6 @@ MENU_RESOURCES_TITLE_MNEMONIC=Z
 MENU_RESOURCES_PRO=LimeWire PRO
 MENU_RESOURCES_PRO_MNEMONIC=L
 MENU_RESOURCES_PRO_ACCESSIBLE=Poka\u017c stron\u0119 domow\u0105 LimeWire PRO.
-MENU_RESOURCES_LIMESHOP=Sklepik LimeWire
-MENU_RESOURCES_LIMESHOP_MNEMONIC=K
-MENU_RESOURCES_LIMESHOP_ACCESSIBLE=Poka\u017c stron\u0119 domow\u0105 Sklepiku LimeWire.
 
 MENU_TOOLS_TITLE=Narz\u0119dzia
 MENU_TOOLS_TITLE_MNEMONIC=A
@@ -1146,7 +1135,7 @@ STATS_BANDWIDTH_PANE_TITLE=Przep\u0142ywno\u015b\u0107
 #??? STATS_BANDWIDTH_PANE_LABEL=Bandwidth statistics include complete information on all bandwidth sent upstream and downstream. Click on one of the categories to see the desired statistics.
 
 STATS_NET_PANE_TITLE=Sie\u0107
-#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite inaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
+#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite innaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
 
 STATS_ADVANCED_PANE_TITLE=Zaawansowane
 #??? STATS_ADVANCED_PANE_LABEL=Advanced statistics include detailed information for Gnutella messages and HTTP traffic. This information can be useful for advanced users as well as for researchers working on the Gnutella network. For example, researchers can choose to write any statistic to a file. This file will be named automatically and will be saved in the working directory. Data will be reported in comma-delimited format, easily viewable in any spreadsheet program. Advanced statistics are not displayed by default and are not recommended for most users.
