--- a/lib/messagebundles/MessagesBundle_ko.properties
+++ b/lib/messagebundles/MessagesBundle_ko.properties
@@ -34,9 +34,6 @@ HAS_TIPS_OF_THE_DAY=false
 ################################################################################
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
-################################################################################
-# Keys/value pairs for general strings that can be used in any components
-################################################################################
 GENERAL_OK_BUTTON_LABEL=\ud655\uc778
 GENERAL_OK_BUTTON_TIP=\uc2e4\ud589 \uc801\uc6a9.
 GENERAL_CANCEL_BUTTON_LABEL=\ucde8\uc18c
@@ -117,7 +114,6 @@ SEARCH_TITLE=\uac80\uc0c9
 MONITOR_TITLE=\uac10\uc2dc
 CONNECTIONS_TITLE=\uc5f0\uacb0
 LIBRARY_TITLE=\uc790\ub8cc\uc2e4
-SHOPPING_TITLE=\ub77c\uc784\uc20d
 OPTIONS_TITLE=\uc635\uc158
 STATS_TITLE=\ud1b5\uacc4
 DOWNLOAD_TITLE=\ub0b4\ub824\ubc1b\uae30
@@ -130,7 +126,6 @@ SEARCH_TIP=\ud30c\uc77c \uac80\uc0c9\uacfc \ub0b4\ub824\ubc1b\uae30
 MONITOR_TIP=\uac80\uc0c9\uacfc \uc62c\ub824\ub193\uae30 \ubcf4\uae30
 CONNECTIONS_TIP=\ub2e4\ub978 \ud074\ub77c\uc774\uc5b8\ud2b8\ub85c \uc5f0\uacb0
 LIBRARY_TIP=\uc800\uc7a5\ub41c \ud30c\uc77c \ucc3d\uace0 \ubcf4\uae30
-SHOPPING_TIP=\ub77c\uc784\uc640\uc774\uc5b4 \uc7a5\ud130\uc5d0\uc11c \uad6c\ub9e4\ud558\uae30
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -184,9 +179,6 @@ MENU_NAV_CONN_MNEMONIC=C
 MENU_NAV_LIB=\uc790\ub8cc\uc2e4 (L)
 MENU_NAV_LIB_MNEMONIC=L
 #??? MENU_NAV_LIB_ACCESSIBLE=Display the library screen
-MENU_NAV_SHOPPING=\ub77c\uc784\uc20d (P)
-MENU_NAV_SHOPPING_MNEMONIC=P
-#??? MENU_NAV_SHOPPING_ACCESSIBLE=Display the LimeShop web site
 
 #??? MENU_VIEW_TITLE=View
 #??? MENU_VIEW_TITLE_MNEMONIC=V
@@ -199,18 +191,12 @@ MENU_VIEW_CONNECTIONS_MNEMONIC=C
 MENU_VIEW_LIBRARY=\uc790\ub8cc\uc2e4 (L)
 MENU_VIEW_LIBRARY_MNEMONIC=L
 #??? MENU_VIEW_LIBRARY_ACCESSIBLE=Show library window
-MENU_VIEW_SHOPPING=\ub77c\uc784\uc20d (P)
-MENU_VIEW_SHOPPING_MNEMONIC=S
-#??? MENU_VIEW_SHOPPING_ACCESSIBLE=Show shopping window
 
 #??? MENU_RESOURCES_TITLE=Resources
 #??? MENU_RESOURCES_TITLE_MNEMONIC=R
 #??? MENU_RESOURCES_PRO=LimeWire PRO
 #??? MENU_RESOURCES_PRO_MNEMONIC=P
 #??? MENU_RESOURCES_PRO_ACCESSIBLE=Display the LimeWire PRO web site
-MENU_RESOURCES_LIMESHOP=\ub77c\uc784\uc20d (L)
-MENU_RESOURCES_LIMESHOP_MNEMONIC=L
-#??? MENU_RESOURCES_LIMESHOP_ACCESSIBLE=Display the LimeShop web site
 
 #??? MENU_TOOLS_TITLE=Tools
 #??? MENU_TOOLS_TITLE_MNEMONIC=T
@@ -1079,7 +1065,7 @@ OPTIONS_UPLOAD_MAIN_TITLE=\uc62c\ub824\ub193\uae30
 #??? STATS_BANDWIDTH_PANE_LABEL=Bandwidth statistics include complete information on all bandwidth sent upstream and downstream. Click on one of the categories to see the desired statistics.
 
 #??? STATS_NET_PANE_TITLE=Network
-#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite inaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
+#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite innaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
 
 #??? STATS_ADVANCED_PANE_TITLE=Advanced
 #??? STATS_ADVANCED_PANE_LABEL=Advanced statistics include detailed information for Gnutella messages and HTTP traffic. This information can be useful for advanced users as well as for researchers working on the Gnutella network. For example, researchers can choose to write any statistic to a file. This file will be named automatically and will be saved in the working directory. Data will be reported in comma-delimited format, easily viewable in any spreadsheet program. Advanced statistics are not displayed by default and are not recommended for most users.
