--- a/lib/messagebundles/MessagesBundle_ro.properties
+++ b/lib/messagebundles/MessagesBundle_ro.properties
@@ -114,7 +114,6 @@ SEARCH_TITLE=Cauta
 MONITOR_TITLE=Monitor
 CONNECTIONS_TITLE=Conexiuni
 LIBRARY_TITLE=Librarie
-SHOPPING_TITLE=LimeShop
 OPTIONS_TITLE=Optiuni
 STATS_TITLE=Statistici
 DOWNLOAD_TITLE=Descarca
@@ -127,7 +126,6 @@ SEARCH_TIP=Cauta si descarca fisierele dorite
 MONITOR_TIP=Afiseaza rezultatul cautarilor si upload-urile
 CONNECTIONS_TIP=Conexiuni la alti clienti
 LIBRARY_TIP=Afiseaza rezumatul fisierelor salvate
-SHOPPING_TIP=Faceti cumparaturi la LimeWire
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -181,9 +179,6 @@ MENU_NAV_CONN_ACCESSIBLE=Afiseaza fereastra de conexiuni
 MENU_NAV_LIB=Librarie
 MENU_NAV_LIB_MNEMONIC=L
 MENU_NAV_LIB_ACCESSIBLE=Afiseaza fereastra librarie
-MENU_NAV_SHOPPING=LimeShop
-MENU_NAV_SHOPPING_MNEMONIC=S
-MENU_NAV_SHOPPING_ACCESSIBLE=Afiseaza LimeShop Website
 
 MENU_VIEW_TITLE=Afiseaza
 MENU_VIEW_TITLE_MNEMONIC=Z
@@ -196,18 +191,12 @@ MENU_VIEW_CONNECTIONS_ACCESSIBLE=Afiseaza fereastra de conexiuni
 MENU_VIEW_LIBRARY=Librarie
 MENU_VIEW_LIBRARY_MNEMONIC=L
 MENU_VIEW_LIBRARY_ACCESSIBLE=Afiseaza libraria
-MENU_VIEW_SHOPPING=LimeShop
-MENU_VIEW_SHOPPING_MNEMONIC=S
-MENU_VIEW_SHOPPING_ACCESSIBLE=Afiseaza fereastra de cumparare
 
 MENU_RESOURCES_TITLE=Resurse
 MENU_RESOURCES_TITLE_MNEMONIC=R
 MENU_RESOURCES_PRO=LimeWire PRO
 MENU_RESOURCES_PRO_MNEMONIC=P
 MENU_RESOURCES_PRO_ACCESSIBLE=Afiseaza LimeWire PRO web site
-MENU_RESOURCES_LIMESHOP=LimeShop
-MENU_RESOURCES_LIMESHOP_MNEMONIC=S
-MENU_RESOURCES_LIMESHOP_ACCESSIBLE=Afiseaza LimeWire web site
 
 MENU_TOOLS_TITLE=Utilitare
 MENU_TOOLS_TITLE_MNEMONIC=U
@@ -1076,7 +1065,7 @@ STATS_BANDWIDTH_PANE_TITLE=Banda
 #??? STATS_BANDWIDTH_PANE_LABEL=Bandwidth statistics include complete information on all bandwidth sent upstream and downstream. Click on one of the categories to see the desired statistics.
 
 STATS_NET_PANE_TITLE=Retea
-#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite inaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
+#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite innaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
 
 STATS_ADVANCED_PANE_TITLE=Avansat
 #??? STATS_ADVANCED_PANE_LABEL=Advanced statistics include detailed information for Gnutella messages and HTTP traffic. This information can be useful for advanced users as well as for researchers working on the Gnutella network. For example, researchers can choose to write any statistic to a file. This file will be named automatically and will be saved in the working directory. Data will be reported in comma-delimited format, easily viewable in any spreadsheet program. Advanced statistics are not displayed by default and are not recommended for most users.
