--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -116,7 +116,6 @@ SEARCH_TITLE=\u641c\u7d22
 MONITOR_TITLE=\u76d1\u89c6
 CONNECTIONS_TITLE=\u90bb\u5c45
 LIBRARY_TITLE=\u6536\u85cf
-SHOPPING_TITLE=Lime\u5546\u5e97
 OPTIONS_TITLE=\u9009\u9879
 STATS_TITLE=\u7edf\u8ba1
 DOWNLOAD_TITLE=\u4e0b\u8f7d
@@ -129,7 +128,6 @@ SEARCH_TIP=\u641c\u7d22 \u548c \u4e0b\u8f7d \u6587\u4ef6
 MONITOR_TIP=\u663e\u793a \u641c\u7d22 \u548c \u4e0a\u8f7d
 CONNECTIONS_TIP=\u8fde\u63a5 \u5230\u5176\u4ed6 \u5ba2\u6237\u7aef
 LIBRARY_TIP=\u67e5\u770b \u4fdd\u5b58\u7684 \u6587\u4ef6
-SHOPPING_TIP=\u53bb LimeWire \u8d85\u5e02\u4e2d \u8d2d\u7269
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -186,9 +184,6 @@ MENU_NAV_CONN_ACCESSIBLE=\u663e\u793a \u90bb\u5c45 \u7a97\u53e3
 MENU_NAV_LIB=\u6536\u85cf (B)
 MENU_NAV_LIB_MNEMONIC=B
 MENU_NAV_LIB_ACCESSIBLE=\u663e\u793a \u6536\u85cf \u7a97\u53e3
-MENU_NAV_SHOPPING=Lime\u5546\u5e97
-MENU_NAV_SHOPPING_MNEMONIC=L
-MENU_NAV_SHOPPING_ACCESSIBLE=\u663e\u793a Lime\u5546\u5e97 \u7f51\u7ad9
 
 MENU_VIEW_TITLE=\u67e5\u770b (V)
 MENU_VIEW_TITLE_MNEMONIC=V
@@ -201,18 +196,12 @@ MENU_VIEW_CONNECTIONS_ACCESSIBLE=\u663e\u793a \u90bb\u5c45 \u7a97\u53e3
 MENU_VIEW_LIBRARY=\u6536\u85cf (B)
 MENU_VIEW_LIBRARY_MNEMONIC=B
 MENU_VIEW_LIBRARY_ACCESSIBLE=\u663e\u793a \u6536\u85cf \u7a97\u53e3
-MENU_VIEW_SHOPPING=Lime\u5546\u5e97
-MENU_VIEW_SHOPPING_MNEMONIC=L
-MENU_VIEW_SHOPPING_ACCESSIBLE=\u663e\u793a Lime\u5546\u5e97 \u7a97\u53e3
 
 MENU_RESOURCES_TITLE=\u8d44\u6e90 (R)
 MENU_RESOURCES_TITLE_MNEMONIC=R
 MENU_RESOURCES_PRO=LimeWire PRO
 MENU_RESOURCES_PRO_MNEMONIC=P
 MENU_RESOURCES_PRO_ACCESSIBLE=\u663e\u793a LimeWire PRO \u7f51\u7ad9
-MENU_RESOURCES_LIMESHOP=Lime\u5546\u5e97
-MENU_RESOURCES_LIMESHOP_MNEMONIC=L
-MENU_RESOURCES_LIMESHOP_ACCESSIBLE=\u663e\u793a Lime\u5546\u5e97 \u7f51\u7ad9
 
 MENU_TOOLS_TITLE=\u5de5\u5177 (T)
 MENU_TOOLS_TITLE_MNEMONIC=T
@@ -1126,7 +1115,7 @@ STATS_BANDWIDTH_PANE_TITLE=\u5e26\u5bbd
 #??? STATS_BANDWIDTH_PANE_LABEL=Bandwidth statistics include complete information on all bandwidth sent upstream and downstream. Click on one of the categories to see the desired statistics.
 
 STATS_NET_PANE_TITLE=\u7f51\u7edc
-#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite inaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
+#??? STATS_NET_PANE_LABEL=Statistics on the current state of the network. These statistics are quite innaccurate due to the dynamic, distributed nature of Gnutella and should not be taken too literally. They can, however, give you a general idea regarding the current state of your connection.
 
 STATS_ADVANCED_PANE_TITLE=\u9ad8\u7ea7
 #??? STATS_ADVANCED_PANE_LABEL=Advanced statistics include detailed information for Gnutella messages and HTTP traffic. This information can be useful for advanced users as well as for researchers working on the Gnutella network. For example, researchers can choose to write any statistic to a file. This file will be named automatically and will be saved in the working directory. Data will be reported in comma-delimited format, easily viewable in any spreadsheet program. Advanced statistics are not displayed by default and are not recommended for most users.
